--- a/.classpath
+++ b/.classpath
@@ -36,5 +36,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/oraclepki.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/orai18n.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/osdt_cert.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/osdt_core.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ucp.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/xdb6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
